--- a/chronic-haskell.cabal
+++ b/chronic-haskell.cabal
@@ -22,8 +22,10 @@ Library
   -- other-modules:       
   -- other-extensions:    
   build-depends:
-    base               >= 4.6    && <4.7,
-    parsec             >= 3.1.5  && < 3.2
+    base               >= 4.6     && <4.7,
+    parsec             >= 3.1.5   && < 3.2,
+    time               >= 1.4.2   && < 1.5,
+    mtl                >= 2.1.2   && < 2.2
 
   default-language:    Haskell2010
   Hs-source-dirs: src
@@ -36,14 +38,18 @@ Test-suite chronic-haskell-tests
   Ghc-options:    -Wall
 
   Build-depends:
-    HUnit                      >= 1.2 && < 1.3,
-    QuickCheck                 >= 2.5 && < 2.7,
-    test-framework             >= 0.4 && < 0.9,
-    test-framework-hunit       >= 0.3 && < 0.4,
-    test-framework-quickcheck2 >= 0.3 && < 0.4,
+    HUnit                      >= 1.2     && < 1.3,
+    QuickCheck                 >= 2.5     && < 2.7,
+    test-framework             >= 0.4     && < 0.9,
+    test-framework-hunit       >= 0.3     && < 0.4,
+    test-framework-quickcheck2 >= 0.3     && < 0.4,
+    old-locale                 >= 1.0.0.5 && < 1.1,
+    iso8601-time               >= 0.1.1   && < 0.2,
     -- Copied from regular dependencies:
-    base               >= 4.6  && <4.7,
-    parsec             >= 3.1.5  && < 3.2
+    base               >= 4.6     && <4.7,
+    parsec             >= 3.1.5   && < 3.2,
+    time               >= 1.4.2   && < 1.5,
+    mtl                >= 2.1.2   && < 2.2
 
 
 Source-repository head
