--- a/chronic-haskell.cabal
+++ b/chronic-haskell.cabal
@@ -33,6 +33,7 @@ Library
 
 Test-suite chronic-haskell-tests
   Type:           exitcode-stdio-1.0
+  default-language:    Haskell2010
   Hs-source-dirs: src tests
   Main-is:        TestSuite.hs
   Ghc-options:    -Wall
